# product_storage

./: .dockerignore  .gitignore  Dockerfile  config.py  docker-compose.yml  pyproject.toml
app/: main.py
app/orders/: handlers.py  schemas.py
app/orders/services/: orders.py
app/products/: handlers.py  schemas.py
app/products/services/: products.py
database/: database.py  models.py
migrations/versions/: 0976718aa64f_0001_init_db.py  0e7ef158045b_0002_edit_unique_fields.py  1620b6362314_0003_rename_field_stock.py  4401de4e55d1_0004_edit_default_order_status.py  622c6bee060d_0005_edit_lazy_in_fields.py  c6b9f5c03182_0007_add_price_fields.py
tests/: conftest.py  test_products.py
